--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,21 @@ video {
   max-width: unset;
   height: unset;
 }
+
+.swiper-pagination-bullet {
+  width: var(
+    --swiper-pagination-bullet-width,
+    var(--swiper-pagination-bullet-size, 14px)
+  ) !important;
+  height: var(
+    --swiper-pagination-bullet-height,
+    var(--swiper-pagination-bullet-size, 14px)
+  ) !important;
+  display: inline-block;
+  border-radius: 50%;
+  background: var(--swiper-pagination-bullet-inactive-color, #ffff) !important;
+  opacity: none !important;
+}
+.ReactModal__Overlay--after-open {
+  z-index: 100 !important;
+}
